--- a/tests/test-basic.html
+++ b/tests/test-basic.html
@@ -76,7 +76,7 @@
         <button type="submit" id="submitBtn">Submit</button>
     </form>
 
-    <script src="tos-modal.js"></script>
+    <script src="../tos-modal.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Initialize TOS Modal
