--- a/tests/test-disappear-reappear.html
+++ b/tests/test-disappear-reappear.html
@@ -107,7 +107,7 @@
         </div>
     </div>
 
-    <script src="tos-modal.js"></script>
+    <script src="../tos-modal.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Test 1: Same Container for Source and Target
