--- a/tests/test-error-handling.html
+++ b/tests/test-error-handling.html
@@ -135,7 +135,7 @@
         </div>
     </div>
 
-    <script src="tos-modal.js"></script>
+    <script src="../tos-modal.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             
