--- a/tests/test-short-content.html
+++ b/tests/test-short-content.html
@@ -145,7 +145,7 @@
         </div>
     </div>
 
-    <script src="tos-modal.js"></script>
+    <script src="../tos-modal.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Initialize TOS Modal for short content
