--- a/tests/test-with-target.html
+++ b/tests/test-with-target.html
@@ -127,7 +127,7 @@
         <p>You can find a copy of the Terms of Service you agreed to below.</p>
     </div>
 
-    <script src="tos-modal.js"></script>
+    <script src="../tos-modal.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Initialize TOS Modal
